--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <div class="starter-template col-md-2">
     </div>
     </div>
+    <script type="text/javascript">
+    $('vector-map').get(0).alertFunc();
     </script>
 </body>
 
