--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
         <div class="starter-template col-md-2" />
     </div>
     <div class="starter-template col-md-8">
-        <vector-map id="map" min_color='#ffffff' max_color="#000000" min_radius=2 max_radius=8 filters='json/filters.json' markers='json/countries_plus_markers.json'></vector-map>
+        <vector-map id="map" min_color='#ffffff' max_color="#000000" min_radius=5 max_radius=15 filters='json/filters.json' markers='json/countries_plus_markers.json'></vector-map>
     </div>
     <div class="starter-template col-md-2">
     </div>
     </div>
+    <script type="text/javascript">
+    $('vector-map').get(0).alertFunc();
     </script>
 </body>
 
