replaced dropdown with jquery ui menu widget

--- a/vector-map.html
+++ b/vector-map.html
@@ -28,12 +28,8 @@
             <ul class="dropdown-menu" id="dr1" role="menu" aria-labelledby="dropdownMenu1">
             </ul>
         </div>
-        <div class="dropdown col-md-2">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true">
-                Select value
-                <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" id="dr2" role="menu" aria-labelledby="dropdownMenu2">
+        <div class="col-md-2">
+            <ul id="jquerymenu">
             </ul>
         </div>
         <!--jQueryUi slider-->
