--- a/vector-map.html
+++ b/vector-map.html
@@ -23,33 +23,6 @@
     #slider {}
     </style>
     <template>
-        <!--Bootstrap dropdown menu-->
-        <div class="col-md-6">
-            <ul id="jquerymenu">
-            </ul>
-            <div id="checkboxes_search">
-                <form id="checkboxes">
-                    <div id="radioButtons">
-                    </div>
-                </form>
-                <form id="search" role="form">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="search_text">
-                    </div>
-                </form>
-                <button type="button" id="search_button" class="btn btn-primary">Search</button>
-            </div>
-        </div>
-        <!--jQueryUi slider-->
-        <div class="col-md-6">
-            <div class="col-md-2" id="minSlider">
-                <p>abc</p>
-            </div>
-            <div class="col-md-8" id="slider" style="margin-top:10px;"></div>
-            <div class="col-md-2" id="maxSlider">
-                <p>abc</p>
-            </div>
-        </div>
         <div id="my_map" class="col-md-12"></div>
     </template>
 </dom-module>
@@ -61,27 +34,23 @@ Polymer({
     alertFunc: function() {},
     //Lifecycle callbacks
     created: function() {
-        var jsonFilters = $('#' + this.id).attr('filters');
         var jsonMarkers = $('#' + this.id).attr('markers');
-        var filterType = $('#' + this.id).attr('filter_type');
 
         // check if all the mandatory fields are present
-        if (!jsonFilters)
-            console.log('You must input a JSON with the filters');
         if (!jsonMarkers)
             console.log('You must input a JSON with the markers');
 
         // two simultaneous JSON requests
         $.when(
-            $.getJSON(jsonFilters),
             $.getJSON(jsonMarkers)
-        ).then(function(jsonFilters, jsonMarkers) {
+        ).then(function(jsonMarkers) {
             // the arguments are on the format: [response, state, jqxhr]
             var vMap = $('#map');
             minRadius = +vMap.attr('min_radius');
             maxRadius = +vMap.attr('max_radius');
             // create a new VectorialMap
-            new VectorialMap().createMap(jsonMarkers[0], jsonFilters[0], minRadius, maxRadius, 'my_map', filterType);
+            vectorMap = new VectorialMap();
+            vectorMap.createMap(jsonMarkers, minRadius, maxRadius, 'my_map');
         });
     },
     properties: {
@@ -94,17 +63,9 @@ Polymer({
             type: Number,
             value: 10
         },
-        filters: {
-            type: String,
-            value: ''   
-        },
         markers: {
             type: String,
             value: ''
-        },
-        filter_type: {
-            type: String,
-            value: "menu"
         }
     }
 });
