divided the main js file by 3 different js files, markers, filters and countries

--- a/vector-map-filters.html
+++ b/vector-map-filters.html
@@ -71,7 +71,7 @@ Polymer({
             if (vectorMap == undefined)
                 vectorMap = new VectorialMap();
             jsonFiltersArray = vectorMap.readFiltersFromJSON(jsonFilters);
-            vectorMap.setFilters(jsonFiltersArray, filterType)
+            setFilters(jsonFiltersArray, filterType)
         });
     },
     properties: {
