--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
     <script src="lib/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
     <!--Load the Maps API-->
+    <script type="text/javascript" src="js/markers.js"></script>
+    <script type="text/javascript" src="js/countries.js"></script>
+    <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/maps-api.js"></script>
     <!--Polymer-->
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
