live example now supports filter tag and programmatic filters

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
     <script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
     <script src="lib/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
     <!--Load the Maps API-->
+    <script type="text/javascript" src="js/markers.js"></script>
+    <script type="text/javascript" src="js/countries.js"></script>
+    <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/maps-api.js"></script>
     <!--Polymer-->
     <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
     <!-- Import custom elements created with Polymer-->
     <link rel="import" href="vector-map.html">
+    <link rel="import" href="vector-map-filters.html">
 </head>
 
 <body>
@@ -34,13 +38,14 @@
         <div class="starter-template col-md-2" />
     </div>
     <div class="starter-template col-md-8">
-        <vector-map id="map" min_color='#ffffff' max_color="#000000" min_radius=5 max_radius=15 filters='json/filters.json' markers='json/countries_plus_markers.json'></vector-map>
+        <vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>
+        <vector-map id="map" min_color='#ffffff' max_color="#000000" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
     </div>
     <div class="starter-template col-md-2">
     </div>
     </div>
     <script type="text/javascript">
-    $('vector-map').get(0).alertFunc();
+    //$('vector-map').get(0).alertFunc();
     </script>
 </body>
 
