--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <vector-map id="map" min_color='#ffffff' max_color="#000000" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
     </div>
     <div class="starter-template col-md-2">
-        <vector-map-multiple-filters id="filters" filters="json/filters.json"></vector-map-multiple-filters>
+        <filters-box id="filters-box" filters="json/filters.json"></filters-box>
     </div>
     </div>
     <script type="text/javascript">
