--- a/vector-map-multiple-filters.html
+++ b/vector-map-multiple-filters.html
@@ -1,6 +1,6 @@
 <link rel="import" href="bower_components/polymer/polymer.html">
 <!--id - name of the custom component-->
-<dom-module id="vector-map-multiple-filters">
+<dom-module id="filters-box">
     <style>
     #filters_box {
         border-radius: 25px;
@@ -25,7 +25,7 @@
 // element registration
 Polymer({
     // name of the element
-    is: "vector-map-multiple-filters",
+    is: "filters-box",
     //Lifecycle callbacks
     created: function() {
         var jsonFilters = $('#' + this.id).attr('filters');
