added basic functionality to the filters box

--- a/vector-map-multiple-filters.html
+++ b/vector-map-multiple-filters.html
@@ -17,7 +17,7 @@
     </style>
     <template>
         <div id="filters_box">
-            <button id="filter_box_apply_filters" type="button" class="btn btn-primary">Primary</button>
+            <button id="filter_box_apply_filters" type="button" class="btn btn-primary">Filter</button>
         </div>
     </template>
 </dom-module>
