--- a/vector-map-multiple-filters.html
+++ b/vector-map-multiple-filters.html
@@ -42,7 +42,7 @@ Polymer({
             // in case the filters element show up before the vector-map element
             if (vectorMap == undefined)
                 vectorMap = new VectorialMap();
-            jsonFiltersArray = vectorMap.readFiltersFromJSON(jsonFilters);
+            jsonFiltersArray = readFiltersFromJSON(jsonFilters);
             setMultipleFilters(jsonFiltersArray);
         });
     },
