filter box is now working for countries

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="starter-template col-md-8">
         <vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>
-        <vector-map id="map" min_color='#ffffff' max_color="#000000" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
+        <vector-map id="map" min_color='#7A7AC8' max_color="#4C3FFE" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
     </div>
     <div class="starter-template col-md-2">
         <filters-box id="filters-box" filters="json/filters.json"></filters-box>
