added new js for multi filters handling

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!--Load the Maps API-->
     <script type="text/javascript" src="js/markers.js"></script>
     <script type="text/javascript" src="js/countries.js"></script>
+    <script type="text/javascript" src="js/multiple-filters.js"></script>
     <script type="text/javascript" src="js/filters.js"></script>
     <script type="text/javascript" src="js/maps-api.js"></script>
     <!--Polymer-->
