added reset button to filters box

--- a/vector-map-multiple-filters.html
+++ b/vector-map-multiple-filters.html
@@ -18,6 +18,7 @@
     <template>
         <div id="filters_box">
             <button id="filter_box_apply_filters" type="button" class="btn btn-primary">Filter</button>
+            <button id="filter_box_reset_filters" type="button" class="btn btn-primary">Reset</button>
         </div>
     </template>
 </dom-module>
