--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 	<!-- Import custom elements created with Polymer-->
 	<link rel="import" href="vector-map.html">
 	<link rel="import" href="vector-map-filters.html">
-	<link rel="import" href="vector-map-multiple-filters.html"> </head>
+	<link rel="import" href="vector-map-multiple-filters.html">
+	<link rel="import" href="filter-box-enumeration.html">
+	<style>
+
+	</style>
+</head>
 
 <body>
 	<div class="container-fluid" style="margin-top:10px">
@@ -43,6 +48,7 @@
 	</div>
 	<div class="starter-template col-md-2">
 		<filters-box id="filters-box" filters="json/filters.json"></filters-box>
+		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json"></filters-box-enumeration>
 	</div>
 	</div>
 	<script type="text/javascript">
