--- a/vector-map-multiple-filters.html
+++ b/vector-map-multiple-filters.html
@@ -44,7 +44,7 @@ Polymer({
             if (vectorMap == undefined)
                 vectorMap = new VectorialMap();
             jsonFiltersArray = readFiltersFromJSON(jsonFilters);
-            setMultipleFilters(jsonFiltersArray);
+            createFiltersBox(jsonFiltersArray);
         });
     },
     properties: {
