--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Marker Filtering</title>
+	<title>bioinformatics-ua/jsMapsAPI</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<!-- Place favicon.ico in the root directory -->
 	<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 	<!--jVectormap-->
@@ -32,7 +31,9 @@
 	<!-- Import custom elements created with Polymer-->
 	<link rel="import" href="vector-map.html">
 	<link rel="import" href="vector-map-filters.html">
-	<link rel="import" href="vector-map-multiple-filters.html"> </head>
+	<link rel="import" href="vector-map-multiple-filters.html">
+	<link rel="import" href="filter-box-enumeration.html">
+</head>
 
 <body>
 	<div class="container-fluid" style="margin-top:10px">
@@ -43,6 +44,7 @@
 	</div>
 	<div class="starter-template col-md-2">
 		<filters-box id="filters-box" filters="json/filters.json"></filters-box>
+		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json"></filters-box-enumeration>
 	</div>
 	</div>
 	<script type="text/javascript">
