created filters-auxiliary.js file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<script type="text/javascript" src="js/countries.js"></script>
 	<script type="text/javascript" src="js/multiple-filters.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
+	<script type="text/javascript" src="js/filters-auxiliary.js"></script>
 	<script type="text/javascript" src="js/createFilters.js"></script>
 	<script type="text/javascript" src="js/maps-api.js"></script>
 	<!--Polymer-->
