--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 	<!--Load the Maps API-->
+
 	<script type="text/javascript" src="js/markers.js"></script>
 	<script type="text/javascript" src="js/countries.js"></script>
 	<script type="text/javascript" src="js/multiple-filters.js"></script>
 	<script type="text/javascript" src="js/filters.js"></script>
+	<script type="text/javascript" src="js/filters-auxiliary.js"></script>
+	<script type="text/javascript" src="js/createFilters.js"></script>
 	<script type="text/javascript" src="js/maps-api.js"></script>
 	<!--Polymer-->
 	<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
@@ -43,7 +46,9 @@
 		<vector-map id="map" min_color='#0cfff0' max_color="#4C3FFE" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
+		<!--
 		<filters-box id="filters-box" filters="json/filters.json"></filters-box>
+	-->
 		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json"></filters-box-enumeration>
 	</div>
 	</div>
