jquery and jquery-ui are now bower dependencies

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 	<!--jVectormap-->
 	<link rel="stylesheet" href="lib/jvectormap/jquery-jvectormap-2.0.2.css">
 	<!--jQueryUI-->
-	<link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-	<script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-	<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 	<!-- Scripts -->
 	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 	<!--Load the Maps API-->
-
 	<script type="text/javascript" src="js/markers.js"></script>
 	<script type="text/javascript" src="js/countries.js"></script>
 	<script type="text/javascript" src="js/multiple-filters.js"></script>
