--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+	<!--Bootstrap-->
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<!--Font Awesome-->
 	<link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
 	<!--jVectormap-->
 	<link rel="stylesheet" href="lib/jvectormap/jquery-jvectormap-2.0.2.css">
-	<!--jQueryUI-->
+	<!--jQuery+ jquery-UI-->
 	<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 	<!-- Scripts -->
-	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 	<!--Load the Maps API-->
