started working on the mapping between one JSON file to another to allow for server side filtering

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<script type="text/javascript" src="js/filters-auxiliary.js"></script>
 	<script type="text/javascript" src="js/createFilters.js"></script>
 	<script type="text/javascript" src="js/maps-api.js"></script>
+	<script type="text/javascript" src="js/json-mapping.js"></script>
 	<!--Polymer-->
 	<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 	<!-- Import custom elements created with Polymer-->
