moved custom elements to a separate folder for a better code structure

--- a/custom-elements/vector-map-multiple-filters.html
+++ b/custom-elements/vector-map-multiple-filters.html
@@ -1,4 +1,4 @@
-<link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <!--id - name of the custom component-->
 <dom-module id="filters-box">
     <style>
