--- a/custom-elements/vector-map.html
+++ b/custom-elements/vector-map.html
@@ -1,4 +1,4 @@
-<link href="bower_components/polymer/polymer.html" rel="import">
+<link href="../bower_components/polymer/polymer.html" rel="import">
 <!--id - name of the custom component-->
 <dom-module id="vector-map">
 	<style>
