--- a/custom-elements/filter-box-enumeration.html
+++ b/custom-elements/filter-box-enumeration.html
@@ -33,7 +33,10 @@
 
 			// check if all the mandatory fields are present
 			if (!jsonFilters)
-				console.log('You must input a JSON with the filters');
+			{
+				console.error('You must input a JSON with the filters');
+				return;
+			}
 
 			$.when($.getJSON(jsonFilters)).then(function (jsonFilters) {
 				jsonFiltersArray = readFiltersFromJSON(jsonFilters);
