--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 	<!-- Scripts -->
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
+	<!-- world map-->
 	<script src="lib/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+	<!-- europe map-->
+	<script src="lib/jvectormap/jquery-jvectormap-europe-mill-en.js"></script>
 	<!--Load the Maps API-->
 	<script type="text/javascript" src="js/markers.js"></script>
 	<script type="text/javascript" src="js/countries.js"></script>
@@ -45,7 +48,7 @@
 		<div class="starter-template col-md-2" /> </div>
 	<div class="starter-template col-md-8">
 		<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>
-		<vector-map id="map" min_color='#0cfff0' max_color="#4C3FFE" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
+		<vector-map id="map" map_type='world_mill_en' min_color='#0cfff0' max_color="#4C3FFE" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
 		<!--
