--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-md-2" /> </div>
 	<div class="starter-template col-md-8">
-		<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>
+		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
 		<vector-map id="map" map_type='world_mill_en' min_color='#0cfff0' max_color="#4C3FFE" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
