--- a/index.html
+++ b/index.html
@@ -26,14 +26,7 @@
 	<!-- europe map-->
 	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
 	<!--Load the Maps API-->
-	<script type="text/javascript" src="js/markers.js"></script>
-	<script type="text/javascript" src="js/countries.js"></script>
-	<script type="text/javascript" src="js/multiple-filters.js"></script>
-	<script type="text/javascript" src="js/filters.js"></script>
-	<script type="text/javascript" src="js/filters-auxiliary.js"></script>
-	<script type="text/javascript" src="js/createFilters.js"></script>
-	<script type="text/javascript" src="js/maps-api.js"></script>
-	<script type="text/javascript" src="js/json-mapping.js"></script>
+	<script type="text/javascript" src="finalJs/jsMapsApi.min.js"></script>
 	<!--Polymer-->
 	<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 	<!-- Import custom elements created with Polymer-->
