changed the look of the js imports

--- a/index.html
+++ b/index.html
@@ -14,19 +14,16 @@
 	<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
 	<!--jVectormap-->
 	<link rel="stylesheet" href="lib/jvectormap/jquery-jvectormap-2.0.2.css">
-	<!--jQuery+ jquery-UI-->
+	<!--jQuery + jquery-UI-->
 	<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
-	<!-- Scripts -->
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
-	<!-- world map-->
-	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
-	<!-- europe map-->
-	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
-	<!--Load the Maps API-->
+	<!--jsMapsApi API + maps-->
 	<script type="text/javascript" src="finalJs/jsMapsApi.min.js"></script>
+	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
+	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
 	<!--Polymer-->
 	<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 	<!-- Import custom elements created with Polymer-->
