filterbox had a small bug

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
 	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
 	<!--Polymer-->
-	<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+	<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 	<!-- Import custom elements created with Polymer-->
 	<link rel="import" href="custom-elements/vector-map.html">
 	<link rel="import" href="custom-elements/vector-map-filters.html">
