--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<!--jsMapsApi API + maps-->
-	<script type="text/javascript" src="finalJs/jsMapsApi.min.js"></script>
+	<!--<script type="text/javascript" src="finalJs/jsMapsApi.min.js"></script>-->
+	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/countries.js"></script>
+	<script type="text/javascript" src="js/createFilters.js"></script>
+	<script type="text/javascript" src="js/filters-auxiliary.js"></script>
+	<script type="text/javascript" src="js/filters.js"></script>
+	<script type="text/javascript" src="js/json-mapping.js"></script>
+	<script type="text/javascript" src="js/markers.js"></script>
+	<script type="text/javascript" src="js/multiple-filters.js"></script>
 	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
 	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
 	<!--Polymer-->
