--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 		<div class="starter-template col-md-2" /> </div>
 	<div class="starter-template col-md-8">
 		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
-		<vector-map id="map" map_type='world_mill_en' min_color='#0cfff0' max_color="#4C3FFE" min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'></vector-map>
+		<vector-map id="map" min_color='#34a219' max_color="#fe3f3f"
+		min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'
+		background_color="#666666"></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
 		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json"></filters-box-enumeration>
