--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div class="starter-template col-md-8">
 		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
 		<vector-map id="map" min_color='#34a219' max_color="#fe3f3f"
-		min_radius=5 max_radius=15 markers='json/countries_plus_markers.json'
+		min_radius=5 max_radius=15 markers='json/countries.json'
 		background_color="#666666"></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
