changed the colors of the countries

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<div class="starter-template col-md-2" /> </div>
 	<div class="starter-template col-md-8">
 		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
-		<vector-map id="map" min_color='#34a219' max_color="#fe3f3f"
+		<vector-map id="map" min_color='#2cb5d4' max_color="#153478"
 		min_radius=5 max_radius=15 markers='json/countries.json'
 		background_color="#666666"></vector-map>
 	</div>
