--- a/custom-elements/vector-map.html
+++ b/custom-elements/vector-map.html
@@ -3,9 +3,13 @@
 <dom-module id="vector-map">
 	<style>
 		/* CSS rules for the custom element */
-
 		#my_map {
-			height: 500px;
+			position: absolute;
+			height: 600px;
+			width: 100%;
+		}
+		head {
+			height: 100%;
 		}
 
 		.dropdown {
