--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<!--jsMapsApi API + maps-->
 	<script type="text/javascript" src="finalJs/jsMapsApi.min.js"></script>
-	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
-	<script src="lib/jvectormap/maps/world-mill-en.js"></script>
+	<script src="finalJs/maps.js"></script>
 	<!--Polymer-->
 	<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 	<!-- Import custom elements created with Polymer-->
@@ -31,17 +30,25 @@
 	<link rel="import" href="custom-elements/vector-map-filters.html">
 	<link rel="import" href="custom-elements/vector-map-multiple-filters.html">
 	<link rel="import" href="custom-elements/filter-box-enumeration.html">
+	<style media="screen">
+	head {
+		height: 100%;
+	}
+	</style>
 </head>
 
 <body>
+	<!--
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-md-2" /> </div>
-	<div class="starter-template col-md-8">
+	-->
+	<div class="starter-template col-md-12">
 		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
 		<vector-map id="map" min_color='#2cb5d4' max_color="#153478"
 		min_radius=5 max_radius=15 markers='json/markers.json'
 		background_color="#666666"></vector-map>
 	</div>
+	<!--
 	<div class="starter-template col-md-2">
 		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json"></filters-box-enumeration>
 	</div>
@@ -49,6 +56,7 @@
 	<script type="text/javascript">
 		//$('vector-map').get(0).alertFunc();
 	</script>
+-->
 </body>
 
 </html>
