--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<!--jsMapsApi API + maps-->
 	<script type="text/javascript" src="finalJs/jsMapsApi.min.js"></script>
-	<script src="finalJs/maps.js"></script>
+	<script type="text/javascript" src="./lib/jvectormap/maps/is-mill-en.js"></script>
+
+	<script type="text/javascript" src="finalJs/maps.js"></script>
 	<!--Polymer-->
 	<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 	<!-- Import custom elements created with Polymer-->
@@ -44,7 +46,7 @@
 	-->
 	<div class="starter-template col-md-12">
 		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
-		<vector-map id="map" min_color='#2cb5d4' max_color="#153478"
+		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
 		min_radius=5 max_radius=15 markers='json/markers.json'
 		background_color="#666666"></vector-map>
 	</div>
