--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<div class="starter-template col-md-12">
 		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
 		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-		min_radius=5 max_radius=15 markers='json/countries.json'
+		min_radius=5 max_radius=15 markers='json/markers.json'
 		background_color="#666666"></vector-map>
 	</div>
 	<!--
