--- a/index.html
+++ b/index.html
@@ -38,25 +38,23 @@
 </head>
 
 <body>
-	<!--
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-md-2" /> </div>
-	-->
-	<div class="starter-template col-md-12">
+	<div class="starter-template col-md-8">
 		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
 		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-		min_radius=5 max_radius=15 markers='json/countries.json'
+		min_radius=5 max_radius=15 markers='json/markers.json'
 		background_color="#666666"></vector-map>
 	</div>
-	<!--
 	<div class="starter-template col-md-2">
 		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json"></filters-box-enumeration>
 	</div>
 	</div>
+	<!--
 	<script type="text/javascript">
 		//$('vector-map').get(0).alertFunc();
 	</script>
--->
+	-->
 </body>
 
 </html>
