small changes in redundant code

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<div class="starter-template col-md-8">
 		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
 		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478" min_radius=5
-		max_radius=15 markers='json/countries.json' background_color="#666666"></vector-map>
+		max_radius=15 markers='json/markers.json' background_color="#666666"></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
 		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json"></filters-box-enumeration>
