--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<!--Load all the maps-->
 	<script type="text/javascript" src="finalJs/maps.js"></script>
 	<!--Load all the necessary scripts-->
+	<script type="text/javascript" src="./lib/bootstrap-dropdown-checkbox/bootstrap-dropdown-checkbox.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
 	<script type="text/javascript" src="./js/countries.js"></script>
 	<script type="text/javascript" src="./js/createFilters.js"></script>
@@ -46,6 +47,10 @@
 	<link rel="import" href="custom-elements/vector-map-filters.html">
 	<link rel="import" href="custom-elements/vector-map-multiple-filters.html">
 	<link rel="import" href="custom-elements/filter-box-enumeration.html">
+	<!--Bootstrap Dropdown Checkbox-->
+	<link rel="stylesheet" href="./lib/bootstrap-dropdown-checkbox/bootstrap-dropdown-checkbox.css">
+
+
 	<style media="screen">
 		head {
 			height: 100%;
@@ -53,23 +58,20 @@
 	</style>
 </head>
 
+
 <body>
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-md-2" /> </div>
 	<div class="starter-template col-md-8">
-		<!--<vector-map-filters id="filters" filters="json/filters.json" filter_type="menu"></vector-map-filters>-->
-		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478" min_radius=5
-		max_radius=15 markers='json/markers.json' background_color="#666666"></vector-map>
+		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478" min_radius=5 max_radius=15 markers='json/markers.json' background_color="#666666"></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
-		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json"></filters-box-enumeration>
+		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json" type="checkboxes"></filters-box-enumeration>
+		<ul class="nav navbar-nav">
+			<li class="dropdown-checkbox-example dropdown-checkbox dropdown open"></li>
+		</ul>
 	</div>
 	</div>
-	<!--
-	<script type="text/javascript">
-		//$('vector-map').get(0).alertFunc();
-	</script>
-	-->
 </body>
 
 </html>
