checkboxes are now listing data for all the filters

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 	</div>
 	<div class="starter-template col-md-2">
 		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json" type="checkboxes"></filters-box-enumeration>
-		<ul class="nav navbar-nav">
-			<li class="dropdown-checkbox-example dropdown-checkbox dropdown open"></li>
+		<ul class="nav navbar-nav" id="filterBoxCheckboxes">
 		</ul>
 	</div>
 	</div>
