--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="starter-template col-md-2" /> </div>
 	<div class="starter-template col-md-8">
 		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-		min_radius=5 max_radius=15 markers='json/markers.json' background_color="#666666"></vector-map>
+		min_radius=5 max_radius=15 markers='./tests/data.json' background_color="#666666"></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
 		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json" type="checkboxes"></filters-box-enumeration>
