removed unused functions

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		min_radius=5 max_radius=15 markers='./json/markers.json' background_color="#666666" ></vector-map>
 	</div>
 	<div class="starter-template col-md-2">
-		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json" type="checkboxes"></filters-box-enumeration>
+		<filters-box-enumeration id="filters-box-enumeration" filters="json/filters.json" type="input"></filters-box-enumeration>
 		<ul class="nav navbar-nav" id="filterBoxCheckboxes">
 		</ul>
 	</div>
