renamed and removed some stuff

--- a/custom-elements/filter-box.html
+++ b/custom-elements/filter-box.html
@@ -2,24 +2,13 @@
 <!--id - name of the custom component-->
 <dom-module id="filters-box-enumeration">
 	<style>
-		#filters_box_enumeration {
-			border-radius: 25px;
-			background: #9a9a9a;
-			padding: 20px;
-			width: 200px;
-			height: 100%;
-			margin-top: 20px;
-		}
-		button {
-			margin-top: 20px;
-		}
 	</style>
 </dom-module>
 <script type="text/javascript">
 	// element registration
 	Polymer({
 		// name of the element
-		is: "filters-box-enumeration",
+		is: "filter-box",
 		//Lifecycle callbacks
 		attached: function() {
 			var filtersBox = this;
