removed unused jquery ui imports

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 	<link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
 	<!--jVectormap-->
 	<link rel="stylesheet" href="lib/jvectormap/jquery-jvectormap-2.0.2.css">
-	<!--jQuery + jquery-UI-->
-	<link rel="stylesheet" href="bower_components/jquery-ui/themes/smoothness/jquery-ui.min.css">
+	<!--jQuery-->
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<!--jsMapsApi API + maps-->
