--- a/custom-elements/filter-box.html
+++ b/custom-elements/filter-box.html
@@ -1,8 +1,12 @@
 <link href="../bower_components/polymer/polymer.html" rel="import">
 <!--id - name of the custom component-->
-<dom-module id="filters-box-enumeration">
+<dom-module id="filter-box">
 	<style>
 	</style>
+	<template>
+		<h3>Filters</h3>
+
+	</template>
 </dom-module>
 <script type="text/javascript">
 	// element registration
