--- a/index.html
+++ b/index.html
@@ -60,14 +60,20 @@
 		<div class="starter-template col-md-2" /> </div>
 	<div class="starter-template col-md-8">
 		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-		min_radius=5 max_radius=15 markers='./json/markers.json' background_color="#666666" ></vector-map>
+		min_radius=5 max_radius=15 markers='./json/markers.json' background_color="#666666"></vector-map>
 	</div>
+
 	<div class="starter-template col-md-2">
-		<filter-box id="filters-box-enumeration" filters="json/filters.json" type="checkboxes"></filters-box-enumeration>
-		<ul class="nav navbar-nav" id="filterBoxCheckboxes">
-		</ul>
+		<button class="col-sm-12">Show/Hide filters</button>
+		<filter-box filters="json/filters.json" type="input"></filter-box>
 	</div>
 	</div>
+
+	<script>
+		$("button").click(function() {
+			$("filter-box").slideToggle("slow");
+		});
+	</script>
 </body>
 
 </html>
