filter and reset button are now nicely spaced

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 	<div class="starter-template col-md-2">
 		<button class="col-sm-12">Show/Hide filters</button>
-		<filter-box filters="json/filters.json" type="input"></filter-box>
+		<filter-box filters="json/filters.json" type="checkboxes"></filter-box>
 	</div>
 	</div>
 
