--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
 
 <body>
 	<div class="container-fluid" style="margin-top:10px">
-		<div class="starter-template col-md-2" /> </div>
-	<div class="starter-template col-md-8">
+	<div class="starter-template col-sm-12 col-md-10">
 		<vector-map id="map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
 		min_radius=5 max_radius=15 markers='./json/markers.json' background_color="#666666"></vector-map>
 	</div>
 
-	<div class="starter-template col-md-2">
-		<button class="col-sm-12">Show/Hide filters</button>
+	<div class="starter-template col-sm-12 col-md-2">
+		<button>Show/Hide filters</button>
 		<filter-box filters="json/filters.json" type="checkboxes"></filter-box>
 	</div>
 	</div>
