index.html now imports only one js file, source maps support is still missing

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<script type="text/javascript" src="finalJs/maps.js"></script>
 	<!--Load all the necessary scripts-->
 	<script type="text/javascript" src="./lib/bootstrap-dropdown-checkbox/bootstrap-dropdown-checkbox.js"></script>
+	<!--
 	<script type="text/javascript" src="./js/main.js"></script>
 	<script type="text/javascript" src="./js/countries.js"></script>
 	<script type="text/javascript" src="./js/createFilters.js"></script>
@@ -36,6 +37,8 @@
 	<script type="text/javascript" src="./js/markers.js"></script>
 	<script type="text/javascript" src="./js/multiple-filters.js"></script>
 	<script type="text/javascript" src="./js/regions.js"></script>
+-->
+	<script type="text/javascript" src="./finalJs/jsMapsApi.js"></script>
 
 
 	<!--Polymer-->
