--- a/index.html
+++ b/index.html
@@ -18,26 +18,11 @@
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<!--jsMapsApi API + maps-->
-	<!--
-	<script type="text/javascript" src="finalJs/jsMapsApi.min.js"></script>
--->
+
 	<!--Load all the maps-->
 	<script type="text/javascript" src="finalJs/maps.js"></script>
 	<!--Load all the necessary scripts-->
 	<script type="text/javascript" src="./lib/bootstrap-dropdown-checkbox/bootstrap-dropdown-checkbox.js"></script>
-	<!--
-	<script type="text/javascript" src="./js/main.js"></script>
-	<script type="text/javascript" src="./js/countries.js"></script>
-	<script type="text/javascript" src="./js/createFilters.js"></script>
-	<script type="text/javascript" src="./js/filters-auxiliary.js"></script>
-	<script type="text/javascript" src="./js/filters.js"></script>
-	<script type="text/javascript" src="./js/json-mapping.js"></script>
-	<script type="text/javascript" src="./js/maps-auxiliary.js"></script>
-	<script type="text/javascript" src="./js/markers.js"></script>
-	<script type="text/javascript" src="./js/multiple-filters.js"></script>
-	<script type="text/javascript" src="./js/regions.js"></script>
--->
 	<script type="text/javascript" src="./finalJs/jsMapsApi.js"></script>
 
 
@@ -48,7 +33,6 @@
 	<link rel="import" href="custom-elements/filter-box.html">
 	<!--Bootstrap Dropdown Checkbox-->
 	<link rel="stylesheet" href="./lib/bootstrap-dropdown-checkbox/bootstrap-dropdown-checkbox.css">
-
 
 	<style media="screen">
 		head {
@@ -67,7 +51,7 @@
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-sm-12 col-md-10">
 			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-			min_radius=5 max_radius=15 markers='./json/markers.json' background_color="#666666"></vector-map>
+			min_radius=5 max_radius=15 countries='./tests/test-countries.json' background_color="#666666"></vector-map>
 		</div>
 
 		<div class="starter-template col-sm-12 col-md-2">
