added 200 countries example

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>jsMapsAPI examples</h1>
         <ul>
             <li><a href="./markers.html">1000 markers</a></li>
+            <li><a href="./countries200.html">200 countries</a></li>
         </ul>
     </body>
 </html>
